--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-toml = "0.8.9"
 planety_core = {git= "https://github.com/planetygame/planety_core.git"}
+toml = "0.8.9"
 maths-rs = "0.2.6"
 csv = "1.3.0"
+clap = { version = "4.4.18", features = ["derive"] }
+serde = { version = "1.0.196", features = ["derive"] }
