--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ maths-rs = "0.2.6"
 csv = "1.3.0"
 clap = { version = "4.4.18", features = ["derive"] }
 serde = { version = "1.0.196", features = ["derive"] }
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+tracing = "0.1.40"
