--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "kepler-cli"
+name = "kepler_cli"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-planety_core = {git= "https://github.com/planetygame/planety_core.git"}
+kepler_core = {git= "https://github.com/keplerplanetary/kepler_core.git"}
 toml = "0.8.9"
 maths-rs = "0.2.6"
 csv = "1.3.0"
