export system parameters

--- a/example.toml
+++ b/example.toml
@@ -6,7 +6,7 @@ export_directory = "export_files"
 export_file_name_prefix = "SIM"
 export_system_state = false # defaults to false
 export_body_history = true # defaults to false
-
+export_system_parameters_history = true # defaults to false
 
 [[system.bodies]]
 name = "Sun"
