--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ clap = { version = "4.4.18", features = ["derive"] }
 serde = { version = "1.0.196", features = ["derive"] }
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 tracing = "0.1.40"
+plotters = "0.3.5"
